--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -11,7 +11,7 @@
     <base href="{{$baseurl}}" />
     <title>{{.Site.Title}}</title>
     <link rel="canonical" href="{{$baseurl}}" />
-    <link href="{{$baseurl}}/img/favicon.ico" type="image/vnd.microsoft.icon" rel="shortcut icon" />
+    <link href="{{$baseurl}}/img/favicon.ico" type="image/vnd.microsoft.icon" rel="icon" />
     <link href="{{.RSSlink}}" rel="alternate" title="{{.Site.Title}}" type="application/rss+xml" />
 
     <!-- Bootstrap -->
