--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -6,13 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    {{ .Hugo.Generator }}
+    {{ hugo.Generator }}
 
     <base href="{{$baseurl}}" />
     <title>{{.Site.Title}}</title>
     <link rel="canonical" href="{{$baseurl}}" />
     <link href="{{$baseurl}}/img/favicon.ico" type="image/vnd.microsoft.icon" rel="icon" />
-    <link href="{{.RSSlink}}" rel="alternate" title="{{.Site.Title}}" type="application/rss+xml" />
+    {{ range .AlternativeOutputFormats -}}
+    {{ printf `<link rel="%s" type="%s" href="%s" title="%s" />` .Rel .MediaType.Type .Permalink $.Site.Title | safeHTML }}
+    {{ end -}}
 
     <!-- Bootstrap -->
     <link href="{{$baseurl}}/css/bootstrap.min.css" rel="stylesheet">
